# bam-lorenz-coverage

./: .gitignore  .travis.yml  CITATION.cff  Changelog  README  README.md  pyproject.toml  requirements.txt  setup.py
.github/workflows/: ci.yml
blc/: __init__.py  blc.py  cli.py
scripts/: flake8.sh  install.sh  run-tests.sh
tests/: test_19.fixed.bam  test_19.fixed.bam.bai  test_class_blc.py  utils.py
tests/blc/: test_blc_001.sam  test_blc_004.sam  test_blc_005.sam  test_blc_006.sam  test_blc_007.sam  test_blc_011.sam  test_blc_013.bed  test_blc_013.sam
